<resources>
    <string name="app_name">On Your Way</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="products">Products</string>
    <string name="rqfrom">Request from</string>
    <string name="empty"> empty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rqlocation">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="welcome">Welcome, </string>
    <string name="qrcode">QR Code</string>
    <string name="swapregister">swap to register</string>
    <string name="swaplogin">swap to login</string>
    <string name="map">Map</string>
    <string name="deliveries">deliveries</string>
    <string name="new_request">New requests</string>
    <string name="profile">profile</string>
    <string name="requests">requests</string>
    <string name="newdel">New Delivery</string>
    <string name="notread">    New delivery, do you want to take it?</string>

    <string name="egg_notification_channel_id" translatable="false">my_channel</string>
    <string name="egg_notification_channel_name" translatable="true">Delivery</string>
</resources>